# SmartTwinMCP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/04-report/: smarttwin_mcp_milestone_v1.md
scripts/: README.md  smoke_all_tools.py  smoke_weak_llm_flow.py
src/smarttwin_mcp/: __init__.py  catalog.py  lint.py  runner.py  search.py  server.py  spec.py
tests/: test_catalog.py  test_catalog_alias_shadowing.py  test_e2e_audit_analytics.py  test_e2e_mcp_session.py  test_e2e_proxy.py  test_http_transport.py  test_lint.py  test_registry_override.py  test_ssh_transport.py
tools/: AGENT_GUIDE.md
tools/_shared/: audit.py  auto_tune.py  job_helpers.py  registry.py  scenario_builder.py
tools/ack_inbound_webhook/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/ack_inbound_webhook/1.1.0/: meta.yaml  script.sh
tools/apply_template_args/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/audit_anomaly/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/audit_summary/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/audit_trail/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/audit_who/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/batch_cancel_jobs/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/batch_cancel_jobs/1.1.0/: meta.yaml  script.sh
tools/check_partition_capacity/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/echo/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/enable_scheduled_job/1.0.0/: args.schema.json  meta.yaml  script.sh
tools/enable_scheduled_job/1.1.0/: meta.yaml  script.sh
(+124 files in other folders)
