[project]
name = "smarttwin-mcp"
version = "0.1.0"
description = "FastMCP server exposing SmartTwinCluster commands as versioned, catalog-indexed tools."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "watchfiles>=0.21",
]

[project.scripts]
smarttwin-mcp = "smarttwin_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
